<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenback"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="91dp"
        android:gravity="center"
        android:text="@string/activity1Testview1"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity1Testview2"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="italic"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/startGameID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startGameID"
        android:layout_width="204dp"
        android:layout_height="95dp"
        android:background="@drawable/greenback"
        android:text="@string/activity1Button1Start"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/quitButtonID"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:background="@android:drawable/ic_lock_power_off"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/helpBtnID"
        android:layout_width="47dp"
        android:layout_height="32dp"
        android:background="@android:drawable/ic_menu_help"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toEndOf="@+id/quitButtonID"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

</android.support.constraint.ConstraintLayout>